--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--
+      width=device-width：视口宽度等于设备宽度。
+      initial-scale=1.0：初始缩放比例为 1。
+      maximum-scale=1.0, user-scalable=no：禁用用户缩放（可选，防止 iOS 动态字体影响布
+    -->
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
